prod_snapshot_2015-09-24_1030/objects/Deal_Calendar__c.object
<CustomObject>
    <fields>
        <fullName>Category_Match_Numeric__c</fullName>
        <formula>IF( Category_Needed_Text__c  =   Category_Received_Text__c , 1, 2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category Match Numeric</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Category_Needed_Text__c</fullName>
        <formula>TEXT( Category_Needed__c )</formula>
        <label>Category Needed Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_Needed__c</fullName>
        <label>Category Needed</label>
        <picklist>
            <picklistValues>
                <fullName>Bar/Nightclub or Restaurants &amp; Food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beauty &amp; Health: Day Spa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>beauty &amp; Health: Facial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beauty &amp; Health: Hair Removal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beauty &amp; Health: Massage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beauty &amp; Health: Nails</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beauty &amp; Health: Salon Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beauty &amp; Health: Skin Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classes: Experiences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment: Adventure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment: Bowling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment: Concerts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment: Family Fun</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment: Haunted House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment: Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment: Skydiving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment: Sports Tickets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grocery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Improvement/Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical &amp; Dental: Lasik</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical &amp; Dental: Teeth Whitening</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Museum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restaurants &amp; Food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restaurants &amp; Food: Quick Serve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail: Fabric Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail: Kids Shoestore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail: Women&apos;s Clothing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialty Food</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category_Received_Text__c</fullName>
        <formula>TEXT( Category_Recieved__c )</formula>
        <label>Category Received Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_Recieved__c</fullName>
        <label>Category Recieved</label>
        <picklist>
            <picklistValues>
                <fullName>Bar/Nightclub or Restaurants &amp; Food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beauty &amp; Health: Day Spa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>beauty &amp; Health: Facial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beauty &amp; Health: Hair Removal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beauty &amp; Health: Massage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beauty &amp; Health: Nails</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beauty &amp; Health: Salon Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beauty &amp; Health: Skin Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classes: Experiences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment: Adventure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment: Bowling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment: Concerts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment: Family Fun</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment: Haunted House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment: Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment: Skydiving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment: Sports Tickets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grocery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Improvement/Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical &amp; Dental: Lasik</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical &amp; Dental: Teeth Whitening</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Museum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restaurants &amp; Food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restaurants &amp; Food: Quick Serve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail: Fabric Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail: Kids Shoestore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail: Women&apos;s Clothing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialty Food</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Day__c</fullName>
        <label>Day</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KPI_Date__c</fullName>
        <formula>NOW()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>KPI Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>Deal Calendar</relationshipLabel>
        <relationshipName>Deal_Calendar</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Match__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Category Match</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <label>Period</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Deal Calendar</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Market__c</columns>
        <columns>Category_Needed__c</columns>
        <columns>Category_Recieved__c</columns>
        <columns>Date__c</columns>
        <columns>Period__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Deal_Calendar</fullName>
        <columns>NAME</columns>
        <columns>Category_Needed__c</columns>
        <columns>Category_Recieved__c</columns>
        <columns>Date__c</columns>
        <columns>Day__c</columns>
        <columns>Market__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Deal Calendar</label>
    </listViews>
    <nameField>
        <displayFormat>DC-{00000}</displayFormat>
        <label>Deal Calendar ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deal Calendar</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>